--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,6 +17,8 @@ jobs:
         with:
           node-version: 18
           cache: npm
+      - name: Install dependencies
+        run: npm ci
       - name: Build website
         run: npm run build
 
