--- a/package.json
+++ b/package.json
@@ -17,12 +17,13 @@
   "dependencies": {
     "@docusaurus/core": "3.2.1",
     "@docusaurus/preset-classic": "3.2.1",
-    "@fontsource/abeezee": "^5.0.13",
+    "@fontsource/nunito-sans": "^5.0.13",
     "@mdx-js/react": "^3.0.0",
     "clsx": "^2.0.0",
     "prism-react-renderer": "^2.3.0",
     "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "react-dom": "^18.0.0",
+    "react-social-media-embed": "^2.5.13"
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "3.2.1",
