--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "prism-react-renderer": "^2.3.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-player": "^2.16.0",
     "react-social-media-embed": "^2.5.13"
   },
   "devDependencies": {
